// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Spec Snapshots should render button using defaults 1`] = `
.c2 {
  grid-area: content;
}

.c0 {
  display: inline-block;
}

.c1 {
  display: grid;
  grid-template-areas: 'left-content content right-content';
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  border-radius: 6px;
  box-sizing: border-box;
  font-weight: 500;
  font-size: 14px;
  line-height: 16px;
  padding: 7px 14px;
  background: #ffffff;
  border: 1px solid rgba(0, 0, 0, 0.1);
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.04);
  color: #504C57;
}

.c1:hover {
  background: #D8D6DB;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
    >
      <div
        class="c2"
      >
        Button
      </div>
    </button>
  </div>
</div>
`;

exports[`<Button /> Spec Snapshots should render different sized button 1`] = `
.c3 {
  grid-area: content;
}

.c1 {
  display: inline-block;
}

.c2 {
  display: grid;
  grid-template-areas: 'left-content content right-content';
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  border-radius: 6px;
  box-sizing: border-box;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  padding: 9px 14px;
  background: #ffffff;
  border: 1px solid rgba(0, 0, 0, 0.1);
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.04);
  color: #504C57;
}

.c2:hover {
  background: #D8D6DB;
}

.c4 {
  display: grid;
  grid-template-areas: 'left-content content right-content';
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  border-radius: 6px;
  box-sizing: border-box;
  font-weight: 500;
  font-size: 14px;
  line-height: 16px;
  padding: 7px 14px;
  background: #ffffff;
  border: 1px solid rgba(0, 0, 0, 0.1);
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.04);
  color: #504C57;
}

.c4:hover {
  background: #D8D6DB;
}

.c5 {
  display: grid;
  grid-template-areas: 'left-content content right-content';
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  border-radius: 6px;
  box-sizing: border-box;
  font-weight: 500;
  font-size: 13px;
  line-height: 16px;
  padding: 5px 12px;
  background: #ffffff;
  border: 1px solid rgba(0, 0, 0, 0.1);
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.04);
  color: #504C57;
}

.c5:hover {
  background: #D8D6DB;
}

.c0 {
  display: flex;
  flex-flow: row;
  gap: 8px;
  justify-content: unset;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <button
        class="c2"
      >
        <div
          class="c3"
        >
          Button
        </div>
      </button>
    </div>
    <div
      class="c1"
    >
      <button
        class="c4"
      >
        <div
          class="c3"
        >
          Button
        </div>
      </button>
    </div>
    <div
      class="c1"
    >
      <button
        class="c5"
      >
        <div
          class="c3"
        >
          Button
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Button /> Spec Snapshots should render icon button 1`] = `
.c1 {
  width: 16px;
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c0 {
  background: transparent;
  border: none;
  padding: 7px;
  border-radius: 99999px;
  color: #656972;
  background: unset;
}

.c0:hover {
  color: #504C57;
  background: rgba(93,105,133,0.18);
}

<div>
  <button
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        color=""
        height="16"
        name="Close"
        preserveaspectratio="none"
        viewbox="0 0 16 16"
        width="16"
      />
    </div>
  </button>
</div>
`;

exports[`<Button /> Spec Snapshots should render icon-danger button 1`] = `
.c1 {
  width: 16px;
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c0 {
  background: transparent;
  border: none;
  padding: 7px;
  border-radius: 99999px;
  color: #FF7C75;
  background: unset;
}

.c0:hover {
  color: #FC4F4A;
  background: rgba(93,105,133,0.18);
}

<div>
  <button
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        color=""
        height="16"
        name="Close"
        preserveaspectratio="none"
        viewbox="0 0 16 16"
        width="16"
      />
    </div>
  </button>
</div>
`;

exports[`<Button /> Spec Snapshots should render primary button 1`] = `
.c2 {
  grid-area: content;
}

.c0 {
  display: inline-block;
}

.c1 {
  display: grid;
  grid-template-areas: 'left-content content right-content';
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  border-radius: 6px;
  box-sizing: border-box;
  font-weight: 500;
  font-size: 14px;
  line-height: 16px;
  padding: 7px 14px;
  color: #ffffff;
  border: 1px solid transparent;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
  background: #6257F4;
}

.c1:hover {
  background: #3C3FAA;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
    >
      <div
        class="c2"
      >
        Button
      </div>
    </button>
  </div>
</div>
`;

exports[`<Button /> Spec Snapshots should render primary-danger button 1`] = `
.c2 {
  grid-area: content;
}

.c0 {
  display: inline-block;
}

.c1 {
  display: grid;
  grid-template-areas: 'left-content content right-content';
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  border-radius: 6px;
  box-sizing: border-box;
  font-weight: 500;
  font-size: 14px;
  line-height: 16px;
  padding: 7px 14px;
  color: #ffffff;
  border: 1px solid transparent;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
  background: #FC4F4A;
}

.c1:hover {
  background: #D01501;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
    >
      <div
        class="c2"
      >
        Button
      </div>
    </button>
  </div>
</div>
`;

exports[`<Button /> Spec Snapshots should render secondary button 1`] = `
.c2 {
  grid-area: content;
}

.c0 {
  display: inline-block;
}

.c1 {
  display: grid;
  grid-template-areas: 'left-content content right-content';
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  border-radius: 6px;
  box-sizing: border-box;
  font-weight: 500;
  font-size: 14px;
  line-height: 16px;
  padding: 7px 14px;
  background: #ffffff;
  border: 1px solid rgba(0, 0, 0, 0.1);
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.04);
  color: #504C57;
}

.c1:hover {
  background: #D8D6DB;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
    >
      <div
        class="c2"
      >
        Button
      </div>
    </button>
  </div>
</div>
`;

exports[`<Button /> Spec Snapshots should render secondary-danger button 1`] = `
.c2 {
  grid-area: content;
}

.c0 {
  display: inline-block;
}

.c1 {
  display: grid;
  grid-template-areas: 'left-content content right-content';
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  border-radius: 6px;
  box-sizing: border-box;
  font-weight: 500;
  font-size: 14px;
  line-height: 16px;
  padding: 7px 14px;
  background: #ffffff;
  border: 1px solid rgba(0, 0, 0, 0.1);
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.04);
  color: #FC4F4A;
}

.c1:hover {
  background: #D8D6DB;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
    >
      <div
        class="c2"
      >
        Button
      </div>
    </button>
  </div>
</div>
`;

exports[`<Button /> Spec Snapshots should render tertiary button 1`] = `
.c2 {
  grid-area: content;
}

.c0 {
  display: inline-block;
}

.c1 {
  display: grid;
  grid-template-areas: 'left-content content right-content';
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  border-radius: 6px;
  box-sizing: border-box;
  font-weight: 500;
  font-size: 14px;
  line-height: 16px;
  padding: 7px 14px;
  background: transparent;
  border: 1px solid transparent;
  color: #94A2FF;
}

.c1:hover {
  background: rgba(93,105,133,0.1);
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1"
    >
      <div
        class="c2"
      >
        Button
      </div>
    </button>
  </div>
</div>
`;
